Fixed overflow problem with svg background

--- a/Profile card component/style.css
+++ b/Profile card component/style.css
@@ -25,6 +25,7 @@ body {
     font-family: "Kumbh+Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
+    overflow: hidden;
 }
 
 #div-main-container {
